--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 h4, h5, h6,
 h1, h2, h3 {margin: 0;}
 ul, ol {margin: 0; padding:0;}
-p {margin: 0;}
+p {margin: 0;font-family: 'Arial', sans-serif;}
 html, body{
 	font-family: 'Ubuntu', sans-serif;
 	font-size: 100%;
