--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 */
 h4, h5, h6,
-h1, h2, h3 {margin: 0;}
+h1, h2, h3 {margin: 0;font-family: 'Ubuntu', sans-serif;}
 ul, ol {margin: 0; padding:0;}
 p {margin: 0;font-family: 'Arial', sans-serif;}
 html, body{
