--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,18 @@ Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 */
+@font-face {
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-weight: 300;
+  src: url(../fonts/Ubuntu Light.woff2) format('woff2');
+}
+@font-face {
+  font-family: 'Varela Round';
+  font-style: normal;
+  font-weight: 300;
+  src: url(../fonts/Varela Round.woff2) format('woff2');
+}
 h4, h5, h6,
 h1, h2, h3 {margin: 0;font-family: 'Ubuntu', sans-serif;}
 ul, ol {margin: 0; padding:0;}
