--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ address span{
 	font-weight:600;
 	font-size:1.5em;
 	margin-bottom:6px;
-	font-family: 'Varela Round', sans-serif;
+	font-family: 'Arial', sans-serif;
 }
 .company_details h4 span,.education_details h4 span{
 	font-size: 0.65em;
